--- a/server/server.yaml
+++ b/server/server.yaml
@@ -18,7 +18,7 @@ spec:
       spec:
          containers:
             - name: spellingbee-server
-              image: zweknu/spellingbee
+              image: docker.io/zweknu/spellingbee
 ---
 apiVersion: v1
 kind: Service
