--- a/server/server.yaml
+++ b/server/server.yaml
@@ -31,6 +31,8 @@ spec:
       spellingbee: web
    ports:
       - port: 3000
+        name: grpc
         targetPort: 3000
-        port: 3001
+      - port: 3001
+        name: web
         targetPort: 3001
