--- a/server/server.yaml
+++ b/server/server.yaml
@@ -19,6 +19,11 @@ spec:
          containers:
             - name: spellingbee-server
               image: docker.io/zweknu/spellingbee
+              resources:
+                 limits:
+                    memory: "128Mi"    
+                    cpu: "1"
+
 ---
 apiVersion: v1
 kind: Service
